fix:add gap to section and input icon align fix

--- a/styles/main.css
+++ b/styles/main.css
@@ -146,6 +146,7 @@ input{
     display: grid;
     grid-template-columns: 7fr 1fr;
     grid-template-rows: 1fr 1fr;
+    gap: 10px;
 }
 
 
